<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/tv_homework02"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/tv_homework02"
        android:layout_alignLeft="@+id/tv_homework02"
        android:layout_alignStart="@+id/tv_homework02"
        android:orientation="horizontal"
        android:id="@+id/rg1_homework02">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/homework02_15sp"
            android:id="@+id/rbtn_15sp_homework02"
            android:checked="false"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/homework02_30sp"
            android:id="@+id/rbtn_30sp_homework02"
            android:checked="false"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/homework02_45sp"
            android:id="@+id/rbtn_45sp_homework02"
            android:checked="false"
            android:layout_weight="1" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rg2_homework02"
        android:layout_below="@+id/rg1_homework02"
        android:layout_alignLeft="@+id/rg1_homework02"
        android:layout_alignStart="@+id/rg1_homework02">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:id="@+id/rbtn_red_homework02"
            android:checked="false"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:id="@+id/rbtn_green_homework02"
            android:checked="false"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:id="@+id/rbtn_blue_homework02"
            android:checked="false"
            android:layout_weight="1" />
    </RadioGroup>
</RelativeLayout>